productions/veadk/archives/1.0.9/zh/changelog.mdx
---
title: "更新日志"
en_link: "/productions/veadk/archives/1.0.9/en/changelog"
---

本更新日志累计记录 VeADK 1.0.0 至 1.0.9 的全部公开用户能力变化。已发布版本按从新到旧排列。

## 1.0.9

VeADK 1.0.9 发布于 2026 年 7 月 26 日。下表列出该版本的公开用户能力变化；完整提交记录见 [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.9)。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| 长期记忆 | 新增 TOS ContextBucket 后端，由托管服务完成记忆推理与检索，并按 `user_id` 隔离记忆。 | [使用 TOS ContextBucket 存储](/productions/veadk/archives/1.0.9/zh/components/memory/tos-context) |
| Studio 知识库 | 创建智能体时默认使用 VikingDB Knowledge，不再提供本地向量库选项，并可选择北京地域 `default` 项目中当前账号可见的已有知识库集合。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.9/zh/components/frontend/studio) |
| Studio 远程智能体 | 远程智能体配置支持按地域选择并刷新 AgentKit 智能体中心，远程智能体仍只能作为子智能体使用。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.9/zh/components/frontend/studio) |
| Studio 消息反馈 | 连接 AgentKit Runtime 后可使用赞/踩评分，反馈幂等写入按智能体区分的评测集；标准名称被占用但不可见时使用稳定的备用名称。 | [VeADK Frontend](/productions/veadk/archives/1.0.9/zh/components/frontend/veadk-frontend) |
| Studio 发布与自更新 | `veadk studio deploy` 默认使用部署地域的 `veadk-studio` TOS Bucket 作为发布渠道，管理员可在 Studio 内更新前后端；账号菜单可查看当前系统版本。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.9/zh/components/frontend/studio) |
| 会话能力叠加 | AgentKit 应用支持为单个会话增减内置工具和远程技能，无需修改已部署智能体。 | [部署到 AgentKit](/productions/veadk/archives/1.0.9/zh/deploy/agentkit) · [Studio 智能体工作台](/productions/veadk/archives/1.0.9/zh/components/frontend/studio) |
| Studio 智能体信息 | 对话页面新增智能体信息栏，展示当前智能体的描述、模型、工具、技能和协作拓扑。 | [VeADK Frontend](/productions/veadk/archives/1.0.9/zh/components/frontend/veadk-frontend) |
| Studio 创建工作台 | 自定义创建新增代码执行工具配置和资源选择器搜索，支持设置 `AGENTKIT_TOOL_ID` 与 `AGENTKIT_TOOL_REGION`。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.9/zh/components/frontend/studio) · [代码沙箱](/productions/veadk/archives/1.0.9/zh/components/tools/code-sandbox) |

## 1.0.8

VeADK 1.0.8 发布于 2026 年 7 月 23 日。下表列出该版本的公开用户能力变化；完整提交记录见 [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.8)。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| Studio 远程智能体 | 自定义创建支持远程智能体子节点；通过 AgentKit 智能体中心 ID、召回数量、地域和 OpenAPI 地址配置，每轮任务按需发现匹配能力。远程智能体不能作为根智能体。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.8/zh/components/frontend/studio) |
| Studio Runtime | Runtime 连接失败时区分权限不足、Agent Server 不可连接和鉴权失败，并给出对应排查建议。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.8/zh/components/frontend/studio) |
| Studio 会话 | 修复后续消息发送时历史上下文丢失的问题；临时会话和 Skill 创建在 Tool、地域或模型凭据准备失败时显示不包含凭据的错误信息。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.8/zh/components/frontend/studio) |
| Studio 部署凭据 | `veadk studio deploy` 依次从命令参数、`VOLCENGINE_ACCESS_KEY` / `VOLCENGINE_SECRET_KEY` 环境变量和 `~/.volc/credentials` 的 `[default]` 配置解析部署凭据。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.8/zh/components/frontend/studio) |
| Studio 部署资源 | 上海部署时，Function、API Gateway、AgentKit CodeEnv Tool 和 Session 使用一致的地域；临时会话与 Skill 创建的模型凭据配置在各自 Tool 中，VeFaaS Function 只接收 Tool ID。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.8/zh/components/frontend/studio) |

## 1.0.7

VeADK 1.0.7 发布于 2026 年 7 月 23 日。下表列出该版本的公开用户能力变化；完整提交记录见 [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.7)。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| 代码沙箱 | `run_code` 新增 `bash` 语言支持，可在 AgentKit 沙箱中执行 Shell 脚本，并提供 `exec_dir`、`env`、`hard_timeout` 与 `max_output_length` 参数，分别控制工作目录、环境变量、硬超时与输出长度上限。 | [代码沙箱](/productions/veadk/archives/1.0.7/zh/components/tools/code-sandbox) |
| Studio 创建模式 | 新增 Skill 创建模式：在两个独立的 AgentKit CodeEnv Session 中并行生成候选技能方案，完成后可对比、下载 ZIP 或发布到 AgentKit；该模式仅限 developer 与 admin 使用。同时新增临时会话模式，退出后自动清理 Session，且不写入普通历史会话。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| Studio 智能搜索 | 新增基于当前智能体的智能搜索：可在会话历史中做全文检索，或通过智能体挂载的联网搜索工具、知识库与长期记忆实时检索；智能体元数据声明已挂载的检索源，Studio 据此提前置灰不可用的来源。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| Studio 角色与访问 | 新增基于角色的访问控制：`veadk studio`、`veadk frontend` 与 `veadk studio deploy` 支持 `--admin` 与 `--developer`；登录后显示用户邮箱与角色徽标，并展示 OAuth 头像。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| Studio 更新命令 | 新增 `veadk studio update --vefaas-app-name <name>`，从本地 VeADK 源码重新构建前端并更新已有的 VeFaaS Application 与 Function，保留原 URL、SSO、IAM、网关、环境变量、标题与 Logo；未指定 `--region` 与 `--project` 时跨北京、上海及全部可见项目查找。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| Studio 部署 | `veadk studio deploy` 自动创建临时会话与 Skill 创建专用的两个 AgentKit CodeEnv Tool，也可通过 `--sandbox-chat-codex-tool-id` 与 `--sandbox-skill-creator-tool-id` 指定已有 Tool；部署后客户端登录时跳过重复的 OAuth 授权确认。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| 飞书渠道 | `FeishuChannelExtension` 支持通过飞书 OpenAPI 拉取话题历史与引用消息，新增 `include_parent_message`、`include_thread_history` 与 `thread_history_limit` 配置，并将引用或话题内容拼接到入站消息之前。 | [飞书渠道](/productions/veadk/archives/1.0.7/zh/components/extensions/feishu-channel) |
| Studio 工作台 | 改进自定义创建工作台：本地技能支持拖入文件夹或 ZIP 并自动识别格式，可按地域和项目浏览 AgentKit Skill Space 及其中技能；部署页展示智能体拓扑、支持导出配置与下载源码；并改进运行时管理与响应式布局、新会话启动、智能体运行时选择器、视频消息渲染与工具调用状态展示。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.7/zh/components/frontend/studio) |
| 依赖 | 放宽 `psycopg2-binary` 版本约束为 `>=2.9.10`；要求 AgentKit SDK 提供默认 CORS 配置。 | [安装](/productions/veadk/archives/1.0.7/zh/get-started/installation) |

## 1.0.6

VeADK 1.0.6 发布于 2026 年 7 月 20 日。下表列出该版本的公开用户能力变化；完整提交记录见 [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.6)。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| Studio 品牌 | `veadk studio` 和 `veadk frontend` 新增 `--site-title`（至多 6 个字符）和 `--site-logo`（本地图片或 HTTP(S) URL，至多 5 MB，支持 PNG、JPEG、GIF、WebP、AVIF、ICO），分别设置系统名称与 Logo。Logo 同时用于侧边栏、登录页和浏览器 favicon，系统名称也作为浏览器页面标题；不传 `--site-title` 时保留默认 `VeADK Studio`。对应环境变量为 `VEADK_SITE_TITLE` 与 `VEADK_SITE_LOGO`。云上部署使用相同参数，网络图片在部署时下载并打包进 VeFaaS。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |
| Studio 部署 | `veadk studio deploy` 支持 `--region` 选择部署地域（`cn-beijing` 默认，`cn-shanghai`），VeFaaS、API Gateway 等资源创建在所选地域；新增 `--project` 指定 VeFaaS 函数所属项目，默认为 `default`。部署时自动跨北京、上海查找 VeIdentity 用户池与客户端，跨地域命中时输出 warning 并继续。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |
| Studio 部署 IAM | `veadk studio deploy` 部署前自动检查 `ServerlessApplicationRole`，缺失时创建该 Role 并绑定 `vefaas_full_access` 自定义策略及所需系统策略；该检查即使指定 `--iam-role` 也会执行。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |
| Studio 创建与调试 | 系统提示词支持所见即所得的 Markdown 编辑，提供标题、列表等快捷输入；初始化、会话或对话失败时展示经过凭据脱敏的错误详情和 Runner 日志，可展开与复制。新增智能体名称校验，须符合 Google ADK 规则：以英文字母或下划线开头，仅含英文字母、数字和下划线，不能使用保留名 `user`，且在智能体结构中唯一。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |
| AgentKit 部署 | 飞书、知识库、短期/长期记忆和观测配置显示在各自配置区域，填写的值仅在部署时转换为运行时环境变量；选择观测 exporter 后对应 `ENABLE_*` 开关自动启用，这些值不写入生成源码或导出的 YAML，部署页同步显示便于核对。多实例部署应使用数据库持久化短期记忆；`run_sse` 返回 404 时界面提示检查会话是否落在不同实例。通过内置 Web UI 部署时，云端镜像构建失败会显示经过凭据脱敏的构建日志片段，便于定位依赖或 Dockerfile 错误。 | [部署到 AgentKit](/productions/veadk/archives/1.0.6/zh/deploy/agentkit) |
| Studio 运行时管理 | 改进运行时管理视图与响应式布局。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |
| 飞书渠道 | 在部署页打开或关闭飞书渠道时，Studio 自动重新生成项目，确保 `app.py`、`extensions` 依赖和运行时环境变量在部署前保持一致。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.6/zh/components/frontend/studio) |

## 1.0.5

VeADK 1.0.5 发布于 2026 年 7 月 19 日。下表列出该版本的公开用户能力变化；完整提交记录见 [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.5)。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| Studio 与 Frontend | Studio 启用与 Frontend 相同的完整界面并默认进入对话页面；新增云端 Runtime 选择、Skill Hub/本地上传/AgentKit SkillSpace、多模态会话、结构化技能与子智能体调用；重构自定义创建流程，智能模式、模板和工作流入口当前显示为「敬请期待」；并完善部署区域、环境变量、任务状态、失败重试和 OAuth Token 转发。 | [VeADK Frontend](/productions/veadk/archives/1.0.5/zh/components/frontend/veadk-frontend) · [Studio 智能体工作台](/productions/veadk/archives/1.0.5/zh/components/frontend/studio) |
| 模型 | 默认推理模型更新为 `doubao-seed-2-1-pro-260628`；Responses API 支持回退模型与方舟上下文管理。 | [模型](/productions/veadk/archives/1.0.5/zh/components/agent/model) |
| 运行时 | `Agent.runtime` 新增 `piagent`，支持通过 PiAgent 执行智能体并桥接函数工具、MCP 工具与技能；安装包不再内置 PiAgent 二进制文件。 | [运行时](/productions/veadk/archives/1.0.5/zh/components/agent/runtime) |
| Studio 测试 | 生成的智能体项目可在服务端受限临时进程中测试；测试进程默认保留 1800 秒，可通过命令参数调整。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.5/zh/components/frontend/studio) |
| Studio 部署 | 使用默认 IAM Role 部署 Studio 时，自动补充访问模型、日志、追踪、知识库、记忆与身份资源所需的系统策略；显式指定的自定义 Role 不会被修改。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.5/zh/components/frontend/studio) |
| AgentKit 集成 | Studio 生成的智能体应用统一通过公开函数 `create_agentkit_app` 构建，集中提供 AgentKit 接口、健康检查、拓扑、Web UI 和短期记忆配置。 | [部署到 AgentKit](/productions/veadk/archives/1.0.5/zh/deploy/agentkit) |
| 飞书渠道 | 改进文本、卡片和合并转发消息的内容提取，并兼容飞书 Channel SDK 的同步生命周期。 | [飞书渠道](/productions/veadk/archives/1.0.5/zh/components/extensions/feishu-channel) |

## 1.0.4

VeADK 1.0.4 发布于 2026 年 7 月 14 日。下表列出该版本的公开用户能力变化。

| 模块 | 变更细节 | 链接 |
| :--- | :--- | :--- |
| Studio | 新增 `veadk studio`，提供专注于创建和管理智能体的工作台；支持智能生成、自定义和模板创建，工作流入口显示为「敬请期待」；并分阶段展示 AgentKit 部署进度。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.4/zh/components/frontend/studio) |
| 智能体管理 | Frontend 与 Studio 新增 AgentKit Runtime 管理视图，按当前用户列出由工作台部署的 Runtime，可查看 Runtime 详情与主智能体信息，并删除 Runtime。 | [Studio 智能体工作台](/productions/veadk/archives/1.0.4/zh/components/frontend/studio) |
| VeFaaS 部署 | 新增 `veadk studio deploy`，可将 Studio 部署到 VeFaaS，接入 VeIdentity 登录，并创建或复用 Serverless API Gateway 与 IAM Role。 | [Studio 部署说明](/productions/veadk/archives/1.0.4/zh/components/frontend/studio) |
| VeADK Frontend | 新增智能体拓扑和转移路径展示；项目部署按构建镜像、部署、发布三个阶段展示实时进度。 | [VeADK Frontend](/productions/veadk/archives/1.0.4/zh/components/frontend/veadk-frontend) |
| Harness 技能 | Harness 的 `skills` 支持 `space:<技能空间 ID>`，可以加载 AgentKit 技能中心的整个技能空间，并继续与 Skill Hub 名称或 slug 混用。 | [技能](/productions/veadk/archives/1.0.4/zh/components/agent/skills) |
| 前端安全 | 移除直接执行浏览器提交代码的测试入口；限制 AgentKit 代理的协议、域名与凭证要求；限制部署文件和静态文件的可访问路径。 | [VeADK Frontend](/productions/veadk/archives/1.0.4/zh/components/frontend/veadk-frontend) |
| 日志 | 日志实现迁移到 Python 标准库 `logging`，保留追踪 ID 关联；非交互式输出不再包含颜色转义序列，流式思考内容不再逐 token 记录。 | [应用日志](/productions/veadk/archives/1.0.4/zh/components/observability/logging) |
| 存储配置 | 完善 Milvus 与 OpenViking 的环境变量和配置示例；1.0.4 继续提供 1.0.3 已加入的 Milvus 知识库、OpenViking 知识库与 OpenViking 长期记忆后端。 | [Milvus](/productions/veadk/archives/1.0.4/zh/components/knowledge/milvus) · [OpenViking 知识库](/productions/veadk/archives/1.0.4/zh/components/knowledge/openviking) · [OpenViking 长期记忆](/productions/veadk/archives/1.0.4/zh/components/memory/openviking) |

## 1.0.3

VeADK 1.0.3 包含以下公开用户能力变化。

| 模块 | 变更细节 | 链接 |
| :--- | :--- | :--- |
| 知识库 | 新增 `milvus` 后端，支持 Milvus 服务和 Milvus Lite URI、Token 或用户名密码鉴权、数据库名称、初始化覆盖、超时和额外返回字段。 | [使用 Milvus 存储](/productions/veadk/archives/1.0.3/zh/components/knowledge/milvus) |
| 知识库 | 新增 `openviking` 后端，支持向 OpenViking 导入文件、目录和文本，并按资源 URI 检索与读取结果。 | [使用 OpenViking 存储](/productions/veadk/archives/1.0.3/zh/components/knowledge/openviking) |
| 长期记忆 | 新增 `openviking` 后端，按用户保存实体、事件与偏好记忆，并在跨会话检索时保持用户隔离。 | [使用 OpenViking 存储](/productions/veadk/archives/1.0.3/zh/components/memory/openviking) |
| A2A | 调用 AgentKit A2A Registry 中的下游智能体时，可传递入站 `X-Ve-TIP-Token` 和 Bearer JWT；下游使用入站 JWT 返回 `401` 时，可回退到 M2M OAuth2 并重试一次。 | [入站认证](/productions/veadk/archives/1.0.3/zh/components/security/inbound) |
| 依赖 | 合并重复的项目依赖声明，并把 OpenViking SDK 加入基础依赖、把 Milvus 集成加入 `extensions`。 | [安装](/productions/veadk/archives/1.0.3/zh/get-started/installation) |

## 1.0.2

VeADK 1.0.2 包含以下公开用户能力变化。

| 模块 | 变更细节 | 链接 |
| :--- | :--- | :--- |
| 模型 | 新增 `MODEL_AGENT_API_KEY_NAME` 和 `Agent.model_api_key_name`，可按火山方舟 API Key 名称解析密钥；显式 Key 值仍具有更高优先级。 | [模型配置](/productions/veadk/archives/1.0.2/zh/components/agent/model) |
| 短期记忆 | PostgreSQL 新增 `schema` 配置，可在一个数据库内为不同部署隔离会话表；VeADK 会创建不存在的 schema 并固定连接的 `search_path`。 | [使用 PostgreSQL 存储](/productions/veadk/archives/1.0.2/zh/components/session/postgresql) |
| MCP | MCP Server 会话过期、服务重启或连接中断后，自动清理失效会话、重连并重试工具加载或调用一次。 | [自定义 MCP Server](/productions/veadk/archives/1.0.2/zh/components/tools/custom-mcp) |
| 前端 | VeADK Frontend 新增工具 OAuth 授权卡片：打开身份提供方授权页，接收回调后提交凭证并继续原工具调用；同时优化账号入口、登录页、会话列表、空回复提示与默认智能体选择。 | [VeADK Frontend](/productions/veadk/archives/1.0.2/zh/components/frontend/veadk-frontend) |
| 网络请求 | VeSearch 与网页抓取请求使用 30 秒超时，避免无响应服务持续阻塞。 | [火山引擎搜索](/productions/veadk/archives/1.0.2/zh/components/tools/vesearch) · [网页抓取](/productions/veadk/archives/1.0.2/zh/components/tools/web-fetch) |
| 安全 | 网页抓取会校验 TLS 证书；内容安全护栏的调试日志不会记录 API Key 值。 | [网页抓取](/productions/veadk/archives/1.0.2/zh/components/tools/web-fetch) · [内容安全护栏](/productions/veadk/archives/1.0.2/zh/components/security/content-safety) |

## 1.0.1

VeADK 1.0.1 发布于 2026 年 7 月 7 日，主要新增 Harness、A2A 注册和 ADK 技能集成，并增强 Codex 运行时与 Frontend。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| Codex 运行时 | 随包提供沙箱、网络访问与操作审核的默认配置：允许完整主机与网络访问，且不要求交互式确认。 | [运行时安全](/productions/veadk/archives/1.0.1/zh/components/agent/runtime#切换执行后端) |
| Harness | 新增 VeADK Harness 扩展，可为每轮调用准备上下文、压缩大体积工具结果并验证最终回答；同时支持在初始化时应用智能体描述。 | [Harness 插件](/productions/veadk/archives/1.0.1/zh/components/execution-engine/index#使用-harness-增强执行) |
| A2A | 新增 Harness A2A 注册能力并修正注册行为。 | [远程智能体发现](/productions/veadk/archives/1.0.1/zh/components/execution-engine/index#从-agentkit-智能体中心发现远程智能体) |
| A2A | A2A 调用支持 OAuth 认证。 | [A2A 鉴权](/productions/veadk/archives/1.0.1/zh/components/security/outbound#a2a-远程智能体鉴权) |
| Codex 运行时 | 对临时后端错误提供可配置重试，并恢复经 Responses 适配层使用网页搜索的能力。 | [Codex 后端请求](/productions/veadk/archives/1.0.1/zh/components/agent/runtime#codex-后端请求) |
| 技能 | 新增与 Google ADK `SkillToolset` 配合使用的 `VeSkillRegistry`，支持 SkillHub 与技能空间；本地技能推荐迁移到 ADK `SkillToolset`，旧的 `Agent(skills=..., skills_mode="local")` 入口保持兼容但已废弃。 | [云端技能](/productions/veadk/archives/1.0.1/zh/components/agent/skills#使用云端技能) |
| VeADK Frontend | 新增网关认证模式，并在创建智能体时提示缺失的火山引擎访问凭证。 | [Frontend 认证](/productions/veadk/archives/1.0.1/zh/components/frontend/veadk-frontend#认证) |
| Codex 运行时 | 支持将智能体技能传递给 Codex 运行时。 | [Codex 技能与工具](/productions/veadk/archives/1.0.1/zh/components/agent/runtime#codex-运行时中的技能与工具) |
| Codex 运行时 | 支持在 Codex 运行时中调用智能体的 MCP 工具和函数工具。 | [Codex 技能与工具](/productions/veadk/archives/1.0.1/zh/components/agent/runtime#codex-运行时中的技能与工具) |
| 示例 | 新增同时使用本地技能和 MCP 工具的 Codex 运行时示例。 | [Codex 技能与工具](/productions/veadk/archives/1.0.1/zh/components/agent/runtime#codex-运行时中的技能与工具) |

完整发布信息参见 [VeADK 1.0.1 Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.1)。

## 1.0.0

VeADK 1.0.0 发布于 2026 年 6 月 22 日。下表依据公开 Release 整理；该版本相对 0.5.40 的公开变更集中在文档入口文案。

| 模块 | 变更细节 | 链接 |
| --- | --- | --- |
| 文档 | 对齐中英文快速开始入口文案，中文入口明确说明可构建并运行第一个智能体。 | [快速开始](/productions/veadk/archives/1.0.0/zh/get-started/quickstart) |

完整发布信息参见 [VeADK 1.0.0 Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.0)。
